css file edited

--- a/googlelandingpage.css
+++ b/googlelandingpage.css
@@ -187,3 +187,17 @@ header {
     font-weight: lighter;
     font-family: Times New Roman, Times, serif;
 }
+
+
+
+#busines {
+    float:left;
+    margin-left: 20px;
+    font-size: 18px;
+    font-weight: lighter;
+    font-family: Times New Roman, Times, serif;
+}
+
+
+
+
