css file edited

--- a/googlelandingpage.css
+++ b/googlelandingpage.css
@@ -209,6 +209,19 @@ header {
 
 
 #privacy {
-    
+    float:right;
+    margin-right: 20px;
+    font-size: 18px;
+    font-weight: lighter;
+    font-family: Times New Roman, Times, serif;
 }
+
+#terms {
+    float:right;
+    margin-right: 20px;
+    font-size: 18px;
+    font-weight: lighter;
+    font-family: Times New Roman, Times, serif;
+}
+
 
